<resources>
    <string name="app_name">SimpleMusicPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play/Pause</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="elpassed">Elpased:</string>
    <string name="title">Title:</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="playlist">Playlist</string>
    <string name="total">Total</string>
    <string name="image">image</string>
    <string name="playImage">playImageButton</string>
    <string name="playlistbutton">playlistbutton</string>
    <string name="prevbutton">prevbutton</string>
    <string name="nextbutton">nextbutton</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="Exit">Exit</string>
    <string name="action_playlist">Playlist</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="img">img</string>
    <string name="log_filename">%1$s%2$s%3$d%4$s</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="mustache_player">Mustache Player</string>
    <string name="context_on">Contextuality ON</string>
    <string name="context_off">Contextuality OFF</string>
    <string name="contextON_OFF">Turn contextuality on or off</string>
    <string name="sb">Save Settings</string>
</resources>
