<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ee3e3e3e">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:id="@+id/titleTV"
                android:textColor="#ffffffff"
                android:layout_gravity="left|center_vertical" />

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:id="@+id/imageLayout"
            android:layout_weight="0.85">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image"
                android:src="@drawable/mustache_player3" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.05">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/elpassed"
                android:id="@+id/elpassedTV"
                android:textColor="#ffffffff"
                android:layout_gravity="left|bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/total"
                android:id="@+id/totalTV"
                android:textColor="#ffffffff"
                android:layout_gravity="bottom|right" />
        </FrameLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginBottom="36dp"
            android:progressBackgroundTint="#ffffffff"
            android:progressTint="#ffffffff"
            android:thumbTint="#ffffffff" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/tableRow"
            android:background="#ff4a4a4a">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shuffleButton"
                android:src="@drawable/shuffle48"
                android:background="#ff4a4a4a" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prevButton"
                android:src="@drawable/prev"
                android:background="#ff4a4a4a"
                android:layout_weight="0.3"
                android:contentDescription="@string/prevbutton" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playButton"
                android:src="@drawable/pause"
                android:background="#ff4a4a4a"
                android:contentDescription="@string/playImage"
                android:layout_weight="0.4" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextButton"
                android:src="@drawable/next"
                android:background="#ff4a4a4a"
                android:layout_weight="0.3"
                android:contentDescription="@string/nextbutton" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repeatButton"
                android:src="@drawable/repeat48"
                android:background="#ff4a4a4a" />

        </TableRow>

    </LinearLayout>

</RelativeLayout>
